# criptocracia

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  GRPC_API.md  NOSTR.md  README.md  docker-compose.yml  manifest.txt  manifest.txt.sig  simple_npub_test.sh  test_npub_support.sh  test_status_transitions.sh  test_validation.rs  test_voter_authorization.sh  verify_status_transition.sh
.do/: app.yaml
.github/workflows/: rust.yml
ec/: Cargo.toml  README.md  build.rs  ec_private.pem  ec_public.pem  voters_pubkeys.json
ec/examples/: create_1b3c.rs  debug_1b3c.rs
ec/proto/: admin.proto
ec/src/: candidates.rs  counting.rs  database.rs  ec.rs  election.rs  main.rs  types.rs  util.rs
ec/src/grpc/: admin.rs  mod.rs  server.rs  tests.rs
examples/: grpc_client.rs
mobile/: CLAUDE.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/lib/: main.dart
mobile/lib/config/: app_config.dart
mobile/lib/l10n/: app_en.arb  app_es.arb
mobile/lib/models/: voter.dart
mobile/lib/providers/: election_provider.dart
mobile/lib/screens/: account_screen.dart  election_detail_screen.dart  elections_screen.dart  results_screen.dart  settings_screen.dart  voting_screen.dart
mobile/lib/services/: blind_signature_service.dart  nostr_key_manager.dart  nostr_service.dart  voting_crypto_service.dart
mobile/lib/widgets/: candidate_card.dart  election_card.dart  result_card.dart
mobile/test/: widget_test.dart
mobile/test/models/: blinding_result_test.dart  voting_token_test.dart
mobile/test/services/: blind_signature_service_test.dart
voter/: Cargo.toml  README.md  settings.toml
voter-cli/: Cargo.toml
voter-cli/src/: cli.rs  main.rs
voter/src/: cli.rs  election.rs  main.rs  settings.rs  util.rs  voters.json
