[package]
name = "ec"
version = "0.1.0"
edition = "2024"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nostr-sdk = { workspace = true, features = ["nip59"] }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
num-bigint-dig = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }

chrono = "0.4.40"
tracing-subscriber = "0.3.19"
rsa              = "0.9.8"              # Sin la feature `pkcs8` para evitar conflicto
rand             = "0.8"
log = "0.4.27"
fern = "0.7.1"
