[package]
name = "ec"
version = "0.1.1"
edition = "2024"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nostr-sdk = { workspace = true, features = ["nip59"] }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
num-bigint-dig = { workspace = true }
nanoid = { workspace = true }
serde_json = { workspace = true }
blind-rsa-signatures = { workspace = true }

chrono = "0.4.40"
tracing-subscriber = "0.3.19"
rand             = "0.8"
log = "0.4.27"
fern = "0.7.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
sha2 = "0.10"
