[package]
name = "voter"
version = "0.1.0"
edition = "2024"

[dependencies]
nostr-sdk = { workspace = true, features = ["nip59"] }
anyhow = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
clap = { version = "4.5.37", features = ["derive"] }
rand = "0.8"
num-bigint-dig   = { version = "0.8", features = ["rand"] }
sha2 = "0.10"
