[package]
name = "voter"
version = "0.1.1"
edition = "2024"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nostr-sdk = { workspace = true, features = ["nip59"] }
anyhow = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }
num-bigint-dig = { workspace = true }
nanoid = { workspace = true }
serde_json = { workspace = true }
blind-rsa-signatures = { workspace = true }

rand = "0.8"
sha2 = "0.10"
ratatui = "0.29.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio-native-tls"] }
futures = "0.3"
dirs = "6.0.0"
fern = "0.7.1"
log = "0.4.27"
config = { version = "0.15.11", features = ["toml"]}
serde    = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.40"
